# push2device-rs

./: Cargo.toml
src/: main.rs
