[package]
name = "push2device-rs"
version = "0.1.0"
authors = ["wfc-cscjm <conor.murphy@wakefern.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }